edit profile view

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_svg: ^2.2.3
   dio: ^5.9.0
   shared_preferences: ^2.5.4
+  skeletonizer: ^2.1.2
+  image_picker: ^1.2.1
 
 
 dev_dependencies:
